Disable push job for now until we settle on repo/name
Signed-off-by: Itxaka <itxaka@spectrocloud.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,7 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test
-    if: github.ref == 'refs/heads/main'
+    if: ${{ false }} #github.ref == 'refs/heads/main'
     env:
       DOCKER_REPO: ttl.sh/elemental-cli
     permissions:
