--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Analysis
         uses: golangci/golangci-lint-action@v3
         with:
+          only-new-issues: true
           args: -v
   docs_build:
     needs:
