--- a/.github/workflows/update-cmd-docs.yaml
+++ b/.github/workflows/update-cmd-docs.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.18.x
+          go-version: '^1.20'
       - name: Build
         run: make build_docs
       - name: Create Pull Request
