--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Build
         run: earthly -P +build
       - name: Show version
-        run: bin/elemental-cli version
+        run: bin/elemental version
   test:
     runs-on: ubuntu-latest
     needs:
